--- a/Frontend Mentor/product-preview-card-component-main/style.css
+++ b/Frontend Mentor/product-preview-card-component-main/style.css
@@ -8,35 +8,36 @@
     --space : 24px;
 }
 
+*{
+    margin: 0;
+}
+
 body{
     background-color : var(--Cream);
     font-family: 'Montserrat', sans-serif;
-    width: 1440px;
+
 }
 
 .main{
     display: flex;
     background-color: var(--White);
-    border-radius: 30px;
+    border-radius: 15px;
     width: fit-content;
-    height: fit-content;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0
+    height: 700px;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .img{
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
+    height: 700px;
 }
 
 .des{
     padding: 50px;
     display: flex;
     flex-direction : column;
-    
 }
 
 .index{
@@ -63,14 +64,13 @@ body{
     font-size: 21px;
     color: var(--Dark-grayish-blue);
     margin-bottom: var(--space);
-    margin: 0;
 }
 
 .detail > span {
     padding: 3px;
 }
 
-li{
+ul{
     list-style : none;
     display:flex;
 }
@@ -78,6 +78,8 @@ li{
 .cost{
     align-items: center;
     color: var(--Dark-grayish-blue);
+    padding-left : 0;
+    margin-bottom: var(--space);
 }
 
 .dis{
@@ -89,6 +91,7 @@ li{
 
 .ori{
     text-decoration: line-through;
+    margin-left: 20px;
 }
 
 button{
