--- a/Frontend Mentor/product-preview-card-component-main/style.css
+++ b/Frontend Mentor/product-preview-card-component-main/style.css
@@ -12,19 +12,18 @@
     margin: 0;
 }
 
-body{
-    background-color : var(--Cream);
-    font-family: 'Montserrat', sans-serif;
+body {
+    display: grid;
+    place-items: center;
+    min-height: 100vh;
+    background-color: var(--Cream);
 }
 
 .main{
     display: flex;
-    background-color: var(--White);
     border-radius: 15px;
-    width: fit-content;
     height: 650px;
-    align-items: center;
-    margin: 0 auto;
+    background-color: var(--White);
 }
 
 .img{
