--- a/Frontend Mentor/nft-preview-card-component-main/style.css
+++ b/Frontend Mentor/nft-preview-card-component-main/style.css
@@ -25,6 +25,8 @@ body{
     min-height: 100vh;
     display:flex;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
     font-size: 18px;
     color: var(--Soft-blue);
     background-color: var(--MainBG-blue);
@@ -40,7 +42,7 @@ body{
     width: 360px;
 }
 
-.card > img{
+.card-img{
     border-radius : 12px;
     width: 100%;
 }
@@ -94,8 +96,35 @@ P{
 
 h1:hover{
     color: var(--Cyan);
+    cursor: pointer;
 }
 
 .name:hover{
     color: var(--Cyan);
+    cursor: pointer;
+}
+
+.img-wrapper {
+    position: relative; 
+    cursor: pointer;
+    overflow: hidden;
+    border-radius : 12px;
+}
+.img-wrapper .card-img{
+    width: 100%;
+    height: 100%;
+}
+.overlay {
+    background-color: hsla(178, 100%, 50%, 0.5);
+    display: flex;       
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+.img-wrapper:hover .overlay {
+    opacity: 1;
 }
